# sqlite3-to-mysql

./: .bandit.yml  .buildinfo  .coveragerc  .flake8  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.html  README.md  SECURITY.md  SKILL.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  sqlite3_to_mysql.html  sqlite3mysql.py  tox.ini
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  sqlite3_to_mysql.doctree
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  docker.yml  docs.yml  publish.yml  test.yml
.travis/: database.json  db_credentials.json  docker.json  initdb.sh  initializedb.sh
_modules/: collections.html  index.html  re.html
_modules/packaging/: version.html
_modules/sqlite3_to_mysql/: click_utils.html  debug_info.html  mysql_utils.html  sqlite_utils.html  transporter.html  types.html
_sources/: README.rst.txt  index.rst.txt  modules.rst.txt  sqlite3_to_mysql.rst.txt
_static/: documentation_options.js
ci/: db_credentials.json
docs/: README.rst  conf.py  index.rst  requirements.txt
skills/sqlite3-to-mysql/: SKILL.md
sqlite3_to_mysql/: __init__.py  __version__.py  cli.py  click_utils.py  debug_info.py  mysql_utils.py  sixeptions.py  sqlite_utils.py  transporter.py  types.py
src/sqlite3_to_mysql/: __init__.py  cli.py  debug_info.py  mysql_utils.py  sqlite_utils.py  transporter.py  types.py
tests/: conftest.py  database.py  factories.py  faker_providers.py  models.py
tests/func/: sqlite3_to_mysql_test.py  test_cli.py
tests/unit/: click_utils_test.py  debug_info_test.py  mysql_ssl_certs_fixture_test.py  mysql_utils_test.py  sqlite3_to_mysql_test.py  sqlite_utils_test.py  types_test.py
