[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite3-to-mysql"
description = "A simple Python tool to transfer data from SQLite 3 to MySQL"
license = { text = "MIT" }
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
authors = [
    { name = "Klemen Tusar", email = "techouse@gmail.com" },
]
urls = { Source = "https://github.com/techouse/sqlite3-to-mysql" }
keywords = [
    "sqlite3",
    "mysql",
    "transfer",
    "data",
    "migrate",
    "migration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
]
dependencies = [
    "Click>=7.0,<8.0.0 ; python_version<'3.6'",
    "Click>=7.0 ; python_version>='3.6'",
    "mysql-connector-python>=8.0.18,<8.0.24 ; python_version<'3.6'",
    "mysql-connector-python>=8.0.18,<8.0.30 ; python_version>='3.6'",
    "pytimeparse>=1.1.8",
    "six>=1.12.0",
    "simplejson>=3.16.0",
    "tqdm>=4.35.0",
    "packaging>=20.3",
    "tabulate<0.8.6 ; python_version<'3.5'",
    "tabulate ; python_version>='3.5'",
    "Unidecode<=1.2.0 ; python_version<'3.5'",
    "Unidecode>=1.2.0 ; python_version>='3.5'",
    "backports-datetime-fromisoformat>=1.0.0 ; python_version>='3.4' and python_version<='3.6'",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = { attr = "sqlite3_to_mysql.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools]
packages = ["sqlite3_to_mysql"]
include-package-data = true
zip-safe = false
license-files = ["LICENSE"]

[tool.distutils.bdist_wheel]
universal = true

[project.scripts]
sqlite3mysql = "sqlite3_to_mysql.cli:cli"