[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite3-to-mysql"
description = "A simple Python tool to transfer data from SQLite 3 to MySQL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Klemen Tusar", email = "techouse@gmail.com" },
]
keywords = [
    "sqlite3",
    "mysql",
    "transfer",
    "data",
    "migrate",
    "migration",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
]
dependencies = [
    "Click>=8.1.3",
    "mysql-connector-python>=9.0.0",
    "pytimeparse2",
    "python-dateutil>=2.9.0.post0",
    "types_python_dateutil",
    "simplejson>=3.19.1",
    "tqdm>=4.65.0",
    "tabulate",
    "Unidecode>=1.3.6",
    "typing_extensions",
    "packaging",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://techouse.github.io/sqlite3-to-mysql/"
Documentation = "https://techouse.github.io/sqlite3-to-mysql/"
Source = "https://github.com/techouse/sqlite3-to-mysql"
Changelog = "https://github.com/techouse/sqlite3-to-mysql/blob/master/CHANGELOG.md"
Sponsor = "https://github.com/sponsors/techouse"
PayPal = "https://paypal.me/ktusar"

[tool.hatch.version]
path = "src/sqlite3_to_mysql/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "CODE-OF-CONDUCT.md",
    "LICENSE",
    "requirements_dev.txt",
]

[project.scripts]
sqlite3mysql = "sqlite3_to_mysql.cli:cli"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | docs
    )/
    | foo.py
)
'''

[tool.isort]
line_length = 120
profile = "black"
lines_after_imports = 2
known_first_party = "sqlite3_to_mysql"
skip_gitignore = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [".*", "venv", "env", "*.egg", "dist", "build"]
minversion = "7.3.1"
addopts = "-rsxX -l --tb=short --strict-markers"
timeout = 300
markers = [
    "init: Run the initialisation test functions",
    "transfer: Run the main transfer test functions",
    "cli: Run the cli test functions",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.8"
exclude = [
    "tests",
    "docs",
    "build",
    "dist",
    "venv",
    "env",
]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pytimeparse2.*,factory.*,docker.*"
ignore_missing_imports = true
